# heist

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTORS  README.SNAP.md  README.md  TODO  haddock.sh  heist-emanote.cabal  heist.cabal
.github/workflows/: ci.yml
docs/: Makefile  templates.css  templates.md
docs/templates/: templates.md
examples/: test01.tpl  test02.tpl
examples/ex01/: home.tpl  nav.tpl
examples/ex02/: default.tpl  home.tpl
examples/ex03/: default.tpl  home.tpl
src/: Caper.hs  Heist.hs
src/Data/: HeterogeneousEnvironment.hs
src/Heist/: Common.hs  Compiled.hs  Interpreted.hs  SpliceAPI.hs  Splices.hs  TemplateDirectory.hs  Types.hs
src/Heist/Compiled/: Experimental.hs  Internal.hs  LowLevel.hs  Old.hs  Splices.hs
src/Heist/Compiled/Splices/: Apply.hs  Bind.hs  Cache.hs  Html.hs  Ignore.hs  Json.hs  JsonCaper.hs  Markdown.hs
src/Heist/Internal/: Types.hs
src/Heist/Internal/Types/: HeistState.hs
src/Heist/Interpreted/: Internal.hs  Old.hs  Splices.hs
src/Heist/Interpreted/Splices/: Apply.hs  Bind.hs  BindStrict.hs  Cache.hs  Html.hs  Ignore.hs  Json.hs  Markdown.hs
src/Heist/Splices/: Apply.hs  Bind.hs  BindStrict.hs  Cache.hs  Html.hs  Ignore.hs  Json.hs  Markdown.hs
src/Text/Templating/: Heist.hs
src/Text/Templating/Heist/: Common.hs  Constants.hs  Internal.hs  Monad.hs  Splices.hs  TemplateDirectory.hs  TemplateMonad.hs  Types.hs
src/Text/Templating/Heist/Splices/: Apply.hs  Bind.hs  BindStrict.hs  Cache.hs  Html.hs  Ignore.hs  Json.hs  Markdown.hs  Static.hs
test/: .ghci  README  heist-testsuite.cabal  pandoc  runTestsAndCoverage.sh
test/benchmark/: Benchmark.hs
test/suite/: Benchmark.hs  TestSuite.hs
test/suite/Caper/: Tests.hs  Tutorial.lhs  TutorialImports.hs
test/suite/Heist/: TestCommon.hs  Tests.hs
test/suite/Heist/Compiled/: Tests.hs  Tutorial.lhs  TutorialImports.hs
test/suite/Heist/Interpreted/: Tests.hs
test/suite/Heist/Interpreted/Pandoc/: Tests.hs
test/suite/Heist/Tutorial/: AttributeSplices.lhs  CompiledSplices.lhs  Imports.hs
test/suite/Text/Templating/Heist/: Tests.hs
test/templates/: a.tpl  attr_splice.tpl  attrs.tpl  attrsubtest1.tpl  attrsubtest2.tpl  backslash.tpl  bind-attrs.tpl  bind_param.tpl  cache.tpl  cached_haddock.tpl  div_expansion.tpl  etc.tpl  index.tpl  ioc.tpl  json.tpl  json_array.tpl  json_object.tpl  json_snippet.tpl  namespaces.tpl  noroot.tpl  page.tpl  pandocdiv.tpl  people.tpl  post.tpl  readert.tpl  readme.txt  rss.xtpl  test.md  textarea_expansion.tpl  title_expansion.tpl
test/templates-all-good/head_merge/: nav.tpl  wrap.tpl
test/templates-bad/: apply-template-not-found.tpl  bind-infinite-loop.tpl  bind-missing-attr.tpl  noroot.tpl
test/templates-defer/: test.tpl
test/templates-loaderror/: _error.tpl  _ok.tpl  test.tpl
test/templates-no-ns/: test.tpl
test/templates-ns-nested/: test.tpl
test/templates-nsbind/: nsbind.tpl  nsbinderror.tpl
test/templates-nscall/: _call.tpl  _invalid.tpl  nscall.tpl
test/templates-pandoc/: markdown.tpl  pandoc.tpl
test/templates-pandoc/foo/: markdown-chdir.tpl  markdown-origdir.tpl  test2.md
test/templates/bar/: a.tpl  index.tpl
test/templates/bind-apply-interaction/: _outer.tpl  caller.tpl
test/templates/foo/: a.tpl  b.tpl
test/templates/head_merge/: index.tpl  wrap.tpl
test/templates/snap-website/: faq.md  faq.tpl  nav.tpl  page-head.tpl  page.tpl  wrap.tpl
test/templates/user/: main.tpl  menu.tpl
test/templates/user/admin/: main.tpl  menu.tpl
