name:           heist
version:        0.7.0.1
synopsis:       An (x)html templating system
description:    An (x)html templating system
license:        BSD3
license-file:   LICENSE
author:         Doug Beardsley, Gregory Collins
maintainer:     snap@snapframework.com
build-type:     Simple
cabal-version:  >= 1.6
homepage:       http://snapframework.com/
category:       Web, Snap

extra-source-files:
  .ghci,
  CONTRIBUTORS,
  docs/Makefile,
  docs/templates.css,
  docs/templates.md,
  examples/ex01/home.tpl,
  examples/ex01/nav.tpl,
  examples/ex02/default.tpl,
  examples/ex02/home.tpl,
  examples/ex03/default.tpl,
  examples/ex03/home.tpl,
  examples/test01.tpl,
  examples/test02.tpl,
  extra/haddock.css,
  extra/hscolour.css,
  extra/logo.gif,
  haddock.sh,
  LICENSE,
  README.md,
  README.SNAP.md,
  test/.ghci,
  test/heist-testsuite.cabal,
  test/README,
  test/runTestsAndCoverage.sh,
  test/suite/TestSuite.hs,
  test/suite/Text/Templating/Heist/Tests.hs,
  test/templates/a.tpl,
  test/templates/attrs.tpl,
  test/templates/bar/a.tpl,
  test/templates/bar/index.tpl,
  test/templates/bind-attrs.tpl,
  test/templates/etc.tpl,
  test/templates/foo/a.tpl,
  test/templates/foo/b.tpl,
  test/templates/index.tpl,
  test/templates/ioc.tpl,
  test/templates/markdown.tpl,
  test/templates/noroot.tpl,
  test/templates/page.tpl,
  test/templates/readme.txt,
  test/templates/test.md,
  test/templates/user/admin/main.tpl,
  test/templates/user/admin/menu.tpl,
  test/templates/user/main.tpl,
  test/templates/user/menu.tpl,
  TODO


Library
  hs-source-dirs: src

  exposed-modules:
    Text.Templating.Heist,
    Text.Templating.Heist.Splices,
    Text.Templating.Heist.Splices.Apply,
    Text.Templating.Heist.Splices.Bind,
    Text.Templating.Heist.Splices.BindStrict,
    Text.Templating.Heist.Splices.Cache,
    Text.Templating.Heist.Splices.Html,
    Text.Templating.Heist.Splices.Ignore,
    Text.Templating.Heist.Splices.Markdown,
    Text.Templating.Heist.Splices.Static,
    Text.Templating.Heist.TemplateDirectory

  other-modules:
    Text.Templating.Heist.Internal,
    Text.Templating.Heist.Types

  build-depends:
    attoparsec >= 0.10 && < 0.11,
    base >= 4 && < 5,
    blaze-builder >= 0.2 && <0.4,
    bytestring,
    containers >= 0.2 && < 0.5,
    directory,
    directory-tree,
    filepath,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2.0 && < 2.1,
    process,
    random,
    text >= 0.10 && < 0.12,
    time >= 1.1 && < 1.5,
    transformers,
    xmlhtml == 0.1.*

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2

  Extensions:
    GeneralizedNewtypeDeriving,
    PackageImports,
    ScopedTypeVariables,
    DeriveDataTypeable,
    FlexibleInstances,
    MultiParamTypeClasses,
    UndecidableInstances,
    OverloadedStrings,
    TypeSynonymInstances,
    NoMonomorphismRestriction


source-repository head
  type:     git
  location: http://git.snapframework.com/heist.git
