name:           heist
version:        0.9
synopsis:       An Haskell template system supporting both HTML5 and XML.
description:
    Heist is a powerful template system that supports both HTML5 and XML.
    Some of Heist's features are:
    .
    * Designer-friendly HTML5 (or XML) syntax
    .
    * Templates can be reloaded to make changes visible without recompiling
      your Haskell code
    .
    * Enforces near-perfect separation of business logic and view
    .
    * Powerful abstraction primitives allowing you to eliminate repetition
    .
    * Easy creation of domain-specific markup languages
    .
    * Built-in support for including JSON and Markdown content in templates
    .
    * Simple mechanism for designer-specified template caching
    .
    * Optional merging of multiple \<head\> tags defined anywhere in the
      document
license:        BSD3
license-file:   LICENSE
author:         Doug Beardsley, Gregory Collins
maintainer:     snap@snapframework.com
build-type:     Simple
cabal-version:  >= 1.6
homepage:       http://snapframework.com/
category:       Web, Snap

extra-source-files:
  .ghci,
  CONTRIBUTORS,
  docs/Makefile,
  docs/templates.css,
  docs/templates.md,
  examples/ex01/home.tpl,
  examples/ex01/nav.tpl,
  examples/ex02/default.tpl,
  examples/ex02/home.tpl,
  examples/ex03/default.tpl,
  examples/ex03/home.tpl,
  examples/test01.tpl,
  examples/test02.tpl,
  extra/haddock.css,
  extra/hscolour.css,
  extra/logo.gif,
  haddock.sh,
  LICENSE,
  README.md,
  README.SNAP.md,
  test/.ghci,
  test/heist-testsuite.cabal,
  test/templates-bad/apply-template-not-found.tpl,
  test/templates-bad/bind-infinite-loop.tpl,
  test/templates-bad/bind-missing-attr.tpl,
  test/templates-bad/apply-missing-attr.tpl,
  test/templates,
  test/templates/readme.txt,
  test/templates/attrsubtest1.tpl,
  test/templates/title_expansion.tpl,
  test/templates/markdown.tpl,
  test/templates/ioc.tpl,
  test/templates/json.tpl,
  test/templates/a.tpl,
  test/templates/bar,
  test/templates/bar/a.tpl,
  test/templates/bar/index.tpl,
  test/templates/user,
  test/templates/user/menu.tpl,
  test/templates/user/admin,
  test/templates/user/admin/menu.tpl,
  test/templates/user/admin/main.tpl,
  test/templates/user/main.tpl,
  test/templates/foo,
  test/templates/foo/b.tpl,
  test/templates/foo/a.tpl,
  test/templates/index.tpl,
  test/templates/post.tpl,
  test/templates/textarea_expansion.tpl,
  test/templates/json_object.tpl,
  test/templates/attrsubtest2.tpl,
  test/templates/bind-attrs.tpl,
  test/templates/people.tpl,
  test/templates/test.md,
  test/templates/attrs.tpl,
  test/templates/bind_param.tpl,
  test/templates/page.tpl,
  test/templates/json_snippet.tpl,
  test/templates/head_merge,
  test/templates/head_merge/nav.tpl,
  test/templates/head_merge/index.tpl,
  test/templates/head_merge/wrap.tpl,
  test/templates/div_expansion.tpl,
  test/runTestsAndCoverage.sh,
  test/README,
  test/suite/TestSuite.hs,
  test/suite/Benchmark.hs,
  test/suite/Heist/Interpreted/Tests.hs,
  test/suite/Heist/Compiled/TutorialImports.hs,
  test/suite/Heist/Compiled/Tests.hs,
  test/suite/Heist/Compiled/Tutorial.lhs,
  test/suite/Heist/Tests.hs,
  TODO


Library
  hs-source-dirs: src

  exposed-modules:
    Heist,
    Heist.Compiled,
    Heist.Interpreted,
    Heist.Splices,
    Heist.Splices.Apply,
    Heist.Splices.Bind,
    Heist.Splices.BindStrict,
    Heist.Splices.Cache,
    Heist.Splices.Html,
    Heist.Splices.Ignore,
    Heist.Splices.Json,
    Heist.Splices.Markdown,
    Heist.TemplateDirectory

  other-modules:
    Data.HeterogeneousEnvironment,
    Heist.Common,
    Heist.Compiled.Internal,
    Heist.Interpreted.Internal,
    Heist.Types

  build-depends:
    aeson                     >= 0.6   && < 0.7,
    attoparsec                >= 0.10  && < 0.11,
    base                      >= 4     && < 5,
    blaze-builder             >= 0.2   && < 0.4,
    blaze-html                >= 0.4   && < 0.6,
    blaze-markup              >= 0.5   && < 0.6,
    bytestring                >= 0.9   && < 0.11,
    containers                >= 0.2   && < 0.6,
    directory                 >= 1.1   && < 1.2,
    directory-tree            >= 0.10  && < 0.11,
    dlist                     >= 0.5   && < 0.6,
    errors                    >= 1.3   && < 1.4,
    filepath                  >= 1.3   && < 1.4,
    hashable                  >= 1.1   && < 1.2,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2.0   && < 2.2,
    process                   >= 1.1   && < 1.2,
    random                    >= 1.0   && < 1.1,
    text                      >= 0.10  && < 0.12,
    time                      >= 1.1   && < 1.5,
    transformers              >= 0.2   && < 0.4,
    xmlhtml                   >= 0.1.6 && < 0.3,
    unordered-containers      >= 0.1.4 && < 0.3,
    vector                    >= 0.9   && < 0.10

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2

  ghc-prof-options:    -prof -auto-all

  Extensions:
    GeneralizedNewtypeDeriving,
    PackageImports,
    ScopedTypeVariables,
    DeriveDataTypeable,
    FlexibleInstances,
    MultiParamTypeClasses,
    UndecidableInstances,
    OverloadedStrings,
    TypeSynonymInstances,
    NoMonomorphismRestriction


source-repository head
  type:     git
  location: http://git.snapframework.com/heist.git

-- Executable benchmark
--   hs-source-dirs: src test/suite
--   main-is: Benchmark.hs
-- 
--   build-depends:
--     MonadCatchIO-transformers >= 0.3     && < 0.4,
--     HUnit                     >= 1.2     && < 1.3,
--     test-framework            >= 0.4     && < 0.7,
--     test-framework-hunit      >= 0.2     && < 0.3,
-- 
--     -- Copied from regular dependencies:
-- 
--     aeson                     >= 0.6   && < 0.7,
--     attoparsec                >= 0.10  && < 0.11,
--     base                      >= 4     && < 5,
--     blaze-builder             >= 0.2   && < 0.4,
--     blaze-html                >= 0.4   && < 0.6,
--     blaze-markup              >= 0.5   && < 0.6,
--     bytestring                >= 0.9   && < 0.11,
--     containers                >= 0.2   && < 0.6,
--     criterion                 >= 0.6   && < 0.7,
--     directory                 >= 1.1   && < 1.2,
--     directory-tree            >= 0.10  && < 0.11,
--     dlist                     >= 0.5   && < 0.6,
--     errors                    >= 1.2   && < 1.3,
--     filepath                  >= 1.3   && < 1.4,
--     hashable                  >= 1.1   && < 1.2,
--     MonadCatchIO-transformers >= 0.2.1 && < 0.4,
--     mtl                       >= 2.0   && < 2.2,
--     process                   >= 1.1   && < 1.2,
--     random                    >= 1.0   && < 1.1,
--     text                      >= 0.10  && < 0.12,
--     time                      >= 1.1   && < 1.5,
--     transformers              >= 0.3   && < 0.4,
--     xmlhtml                   >= 0.1.6 && < 0.3,
--     unordered-containers      >= 0.1.4 && < 0.3,
--     vector                    >= 0.9   && < 0.10
-- 
--   ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
--                -fno-warn-unused-do-bind -rtsopts
-- 
--   ghc-prof-options: -prof -auto-all
-- 
--   Extensions:
--     GeneralizedNewtypeDeriving,
--     PackageImports,
--     ScopedTypeVariables,
--     DeriveDataTypeable,
--     FlexibleInstances,
--     MultiParamTypeClasses,
--     UndecidableInstances,
--     OverloadedStrings,
--     TypeSynonymInstances,
--     NoMonomorphismRestriction

