name:           heist
version:        0.13.0.5
synopsis:       An Haskell template system supporting both HTML5 and XML.
description:
    Heist is a powerful template system that supports both HTML5 and XML.
    Some of Heist's features are:
    .
    * Designer-friendly HTML5 (or XML) syntax
    .
    * Templates can be reloaded to make changes visible without recompiling
      your Haskell code
    .
    * Enforces near-perfect separation of business logic and view
    .
    * Powerful abstraction primitives allowing you to eliminate repetition
    .
    * Easy creation of domain-specific markup languages
    .
    * Built-in support for including JSON and Markdown content in templates
    .
    * Simple mechanism for designer-specified template caching
    .
    * Optional merging of multiple \<head\> tags defined anywhere in the
      document
license:        BSD3
license-file:   LICENSE
author:         Doug Beardsley, Gregory Collins
maintainer:     snap@snapframework.com
build-type:     Simple
cabal-version:  >= 1.6
homepage:       http://snapframework.com/
category:       Web, Snap

extra-source-files:
  .ghci,
  CONTRIBUTORS,
  docs/Makefile,
  docs/templates.css,
  docs/templates.md,
  examples/ex01/home.tpl,
  examples/ex01/nav.tpl,
  examples/ex02/default.tpl,
  examples/ex02/home.tpl,
  examples/ex03/default.tpl,
  examples/ex03/home.tpl,
  examples/test01.tpl,
  examples/test02.tpl,
  extra/haddock.css,
  extra/hscolour.css,
  extra/logo.gif,
  haddock.sh,
  LICENSE,
  README.md,
  README.SNAP.md,
  test/.ghci,
  test/heist-testsuite.cabal,
  test/README,
  test/runTestsAndCoverage.sh,
  test/suite/Benchmark.hs,
  test/suite/Heist/Compiled/Tests.hs,
  test/suite/Heist/Interpreted/Tests.hs,
  test/suite/Heist/TestCommon.hs,
  test/suite/Heist/Tests.hs,
  test/suite/Heist/Tutorial/AttributeSplices.lhs,
  test/suite/Heist/Tutorial/CompiledSplices.lhs,
  test/suite/Heist/Tutorial/Imports.hs,
  test/suite/TestSuite.hs,
  test/templates/a.tpl,
  test/templates/attr_splice.tpl,
  test/templates/attrs.tpl,
  test/templates/attrsubtest1.tpl,
  test/templates/attrsubtest2.tpl,
  test/templates/bar/a.tpl,
  test/templates/bar/index.tpl,
  test/templates/bind-apply-interaction/_outer.tpl,
  test/templates/bind-apply-interaction/caller.tpl,
  test/templates/bind-attrs.tpl,
  test/templates/bind_param.tpl,
  test/templates/cache.tpl,
  test/templates/div_expansion.tpl,
  test/templates/foo/a.tpl,
  test/templates/foo/b.tpl,
  test/templates/foo/markdown-chdir.tpl,
  test/templates/foo/markdown-origdir.tpl,
  test/templates/foo/test2.md,
  test/templates/head_merge/index.tpl,
  test/templates/head_merge/nav.tpl,
  test/templates/head_merge/wrap.tpl,
  test/templates/index.tpl,
  test/templates/ioc.tpl,
  test/templates/json.tpl,
  test/templates/json_object.tpl,
  test/templates/json_snippet.tpl,
  test/templates/markdown.tpl,
  test/templates/page.tpl,
  test/templates/people.tpl,
  test/templates/post.tpl,
  test/templates/readme.txt,
  test/templates/test.md,
  test/templates/textarea_expansion.tpl,
  test/templates/title_expansion.tpl,
  test/templates/user/admin/main.tpl,
  test/templates/user/admin/menu.tpl,
  test/templates/user/main.tpl,
  test/templates/user/menu.tpl,
  test/templates-bad/apply-missing-attr.tpl,
  test/templates-bad/apply-template-not-found.tpl,
  test/templates-bad/bind-infinite-loop.tpl,
  test/templates-bad/bind-missing-attr.tpl,
  TODO


Library
  hs-source-dirs: src

  exposed-modules:
    Heist,
    Heist.Compiled,
    Heist.Compiled.LowLevel,
    Heist.Interpreted,
    Heist.SpliceAPI,
    Heist.Splices,
    Heist.Splices.Apply,
    Heist.Splices.Bind,
    Heist.Splices.BindStrict,
    Heist.Splices.Cache,
    Heist.Splices.Html,
    Heist.Splices.Ignore,
    Heist.Splices.Json,
    Heist.Splices.Markdown,
    Heist.TemplateDirectory

  other-modules:
    Data.HeterogeneousEnvironment,
    Heist.Common,
    Heist.Compiled.Internal,
    Heist.Interpreted.Internal,
    Heist.Types

  build-depends:
    MonadCatchIO-transformers  >= 0.2.1   && < 0.4,
    aeson                      >= 0.6     && < 0.8,
    attoparsec                 >= 0.10    && < 0.12,
    base                       >= 4       && < 5,
    blaze-builder              >= 0.2     && < 0.4,
    blaze-html                 >= 0.4     && < 0.7,
    bytestring                 >= 0.9     && < 0.11,
    containers                 >= 0.2     && < 0.6,
    directory                  >= 1.1     && < 1.3,
    directory-tree             >= 0.10    && < 0.12,
    dlist                      >= 0.5     && < 0.7,
    errors                     >= 1.4     && < 1.5,
    filepath                   >= 1.3     && < 1.4,
    hashable                   >= 1.1     && < 1.3,
    mtl                        >= 2.0     && < 2.2,
    process                    >= 1.1     && < 1.2,
    random                     >= 1.0.1.0 && < 1.1,
    text                       >= 0.10    && < 1.2,
    time                       >= 1.1     && < 1.5,
    transformers               >= 0.3     && < 0.4,
    unordered-containers       >= 0.1.4   && < 0.3,
    vector                     >= 0.9     && < 0.11,
    xmlhtml                    >= 0.2.3   && < 0.3

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2

  ghc-prof-options:    -prof -auto-all

  Extensions:
    GeneralizedNewtypeDeriving,
    PackageImports,
    ScopedTypeVariables,
    DeriveDataTypeable,
    FlexibleInstances,
    MultiParamTypeClasses,
    UndecidableInstances,
    OverloadedStrings,
    TypeSynonymInstances,
    NoMonomorphismRestriction


source-repository head
  type:     git
  location: https://github.com/snapframework/heist.git

