name:           heist-testsuite
version:        0.1.1
build-type:     Simple
cabal-version:  >= 1.6

Executable testsuite
  hs-source-dirs:  ../src suite
  main-is:         TestSuite.hs

  build-depends:
    HUnit                      >= 1.2      && < 2,
    QuickCheck                 >= 2,
    MonadCatchIO-transformers  >= 0.2.1    && < 0.4,
    test-framework             >= 0.6      && <0.7,
    test-framework-hunit       >= 0.2.7    && <0.3,
    test-framework-quickcheck2 >= 0.2.12.1 && <0.3,
    aeson                      >= 0.6     && < 0.7,
    attoparsec                 >= 0.10    && < 0.11,
    base                       >= 4       && < 5,
    blaze-builder              >= 0.2     && < 0.4,
    blaze-html                 >= 0.4     && < 0.6,
    bytestring                 >= 0.9     && < 0.11,
    containers                 >= 0.2     && < 0.6,
    directory                  >= 1.1     && < 1.3,
    directory-tree             >= 0.10    && < 0.12,
    dlist                      >= 0.5     && < 0.6,
    errors                     >= 1.4     && < 1.5,
    filepath                   >= 1.3     && < 1.4,
    hashable                   >= 1.1     && < 1.3,
    mtl                        >= 2.0     && < 2.2,
    process                    >= 1.1     && < 1.2,
    random                     >= 1.0.1.0 && < 1.1,
    text                       >= 0.10    && < 0.12,
    time                       >= 1.1     && < 1.5,
    transformers               >= 0.2     && < 0.4,
    unordered-containers       >= 0.1.4   && < 0.3,
    vector                     >= 0.9     && < 0.11,
    xmlhtml                    >= 0.1.6   && < 0.3


  ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
  Extensions: OverloadedStrings

Executable benchmark
  hs-source-dirs: ../src suite
  main-is: Benchmark.hs

  build-depends:
    MonadCatchIO-transformers >= 0.3     && < 0.4,
    HUnit                     >= 1.2     && < 1.3,
    criterion                 >= 0.6     && < 0.7,
    test-framework            >= 0.4     && < 0.7,
    test-framework-hunit      >= 0.2     && < 0.3,

    -- Copied from regular dependencies:

    aeson                      >= 0.6     && < 0.7,
    attoparsec                 >= 0.10    && < 0.11,
    base                       >= 4       && < 5,
    blaze-builder              >= 0.2     && < 0.4,
    blaze-html                 >= 0.4     && < 0.6,
    bytestring                 >= 0.9     && < 0.11,
    containers                 >= 0.2     && < 0.6,
    directory                  >= 1.1     && < 1.3,
    directory-tree             >= 0.10    && < 0.12,
    dlist                      >= 0.5     && < 0.6,
    errors                     >= 1.4     && < 1.5,
    filepath                   >= 1.3     && < 1.4,
    hashable                   >= 1.1     && < 1.3,
    mtl                        >= 2.0     && < 2.2,
    process                    >= 1.1     && < 1.2,
    random                     >= 1.0.1.0 && < 1.1,
    text                       >= 0.10    && < 0.12,
    time                       >= 1.1     && < 1.5,
    transformers               >= 0.2     && < 0.4,
    unordered-containers       >= 0.1.4   && < 0.3,
    vector                     >= 0.9     && < 0.11,
    xmlhtml                    >= 0.1.6   && < 0.3

  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind -rtsopts

  ghc-prof-options: -prof -auto-all

  Extensions:
    GeneralizedNewtypeDeriving,
    PackageImports,
    ScopedTypeVariables,
    DeriveDataTypeable,
    FlexibleInstances,
    MultiParamTypeClasses,
    UndecidableInstances,
    OverloadedStrings,
    TypeSynonymInstances,
    NoMonomorphismRestriction

