name:           heist-testsuite
version:        0.1.1
build-type:     Simple
cabal-version:  >= 1.6

Executable testsuite
  hs-source-dirs:  ../src suite
  main-is:         TestSuite.hs

  build-depends:
    HUnit                      >= 1.2      && < 2,
    QuickCheck                 >= 2        && < 2.9,
    lens                       >= 4.3      && < 4.14,
    test-framework             >= 0.4      && < 0.9,
    test-framework-hunit       >= 0.2.7    && < 0.4,
    test-framework-quickcheck2 >= 0.2.12.1 && < 0.4,
    aeson,
    attoparsec,
    base,
    blaze-builder,
    blaze-html,
    bytestring,
    containers,
    directory,
    directory-tree,
    dlist,
    errors,
    filepath,
    hashable,
    lifted-base,
    map-syntax,
    monad-control,
    mtl,
    process,
    random,
    text,
    time,
    transformers,
    transformers-base,
    unordered-containers,
    vector,
    xmlhtml


  ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
  Extensions: OverloadedStrings

Executable benchmark
  hs-source-dirs: ../src suite
  main-is: Benchmark.hs

  build-depends:
    HUnit,
    criterion                 >= 1.0     && < 1.1,
    test-framework,
    test-framework-hunit,

    -- Copied from regular dependencies:

    aeson,
    attoparsec,
    base,
    blaze-builder,
    blaze-html,
    bytestring,
    containers,
    directory,
    directory-tree,
    dlist,
    errors,
    filepath,
    hashable,
    map-syntax,
    monad-control,
    mtl,
    process,
    random,
    statistics                 >= 0.11    && < 0.14,
    text,
    time,
    transformers,
    transformers-base,
    unordered-containers,
    vector,
    xmlhtml

  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind -rtsopts

  ghc-prof-options: -prof -auto-all

  Extensions:
    GeneralizedNewtypeDeriving,
    PackageImports,
    ScopedTypeVariables,
    DeriveDataTypeable,
    FlexibleInstances,
    MultiParamTypeClasses,
    UndecidableInstances,
    OverloadedStrings,
    TypeSynonymInstances,
    NoMonomorphismRestriction

